add more stuff to marketplace

--- a/features.html
+++ b/features.html
@@ -115,7 +115,7 @@
             <div class="row">
                 <div class="feature-item">
                   <h3 class="text-primary" id="encryption"><i class="icon-key"></i> Full encryption</h3>
-                  <p>On top of the phone multi-layer encryption, <strong>blue wallet</strong> can encrypt everyting with an added password. Biometric security (touch ID, Face ID) is not secutire, so you will have an aditional password to encrypt your wallet instead.</p>
+                  <p>On top of the phone multi-layer encryption, <strong>blue wallet</strong> can encrypt everyting with an added password. Biometric security (touch ID, Face ID) is not safe, so you will have an aditional password to encrypt your wallet instead.</p>
                 </div>
             </div>
             <div class="row">
