--- a/marketplace/index.html
+++ b/marketplace/index.html
@@ -159,7 +159,119 @@
                     </div>
                     <div class="apptext">
                         <h2>Receive SMS</h2>
-                        <p>Generate disposable phone number to receive text messages.</p>
+                        <p>Generate disposable phone number to receive text messages</p>
+                    </div>
+                </div>
+            </a>
+        </div> <!-- end -->
+
+         <div class="row"> <!-- start -->
+            <a href="https://bitlaunch.io/">
+                <div class="grid-container">
+                    <div class="appicon">
+                        <img src="img/bitlaunch.png">
+                    </div>
+                    <div class="apptext">
+                        <h2>BitLaunch</h2>
+                        <p>Pay crypocurrency for your cloud providers</p>
+                    </div>
+                </div>
+            </a>
+        </div> <!-- end -->
+
+        <div class="row"> <!-- start -->
+            <a href="https://cmascremeras.store/">
+                <div class="grid-container">
+                    <div class="appicon">
+                        <img src="img/cmasc.png">
+                    </div>
+                    <div class="apptext">
+                        <h2>CmasC Remeras</h2>
+                        <p>Online designer t-shirts retailer in Buenos Aires</p>
+                    </div>
+                </div>
+            </a>
+        </div> <!-- end -->
+
+        <div class="row"> <!-- start -->
+            <a href="http://www.chromaticcoffee.com/">
+                <div class="grid-container">
+                    <div class="appicon">
+                        <img src="img/chromatic.png">
+                    </div>
+                    <div class="apptext">
+                        <h2>Chromatic Coffee</h2>
+                        <p>An online coffee retailer</p>
+                    </div>
+                </div>
+            </a>
+        </div> <!-- end -->
+
+          <div class="row"> <!-- start -->
+            <a href="https://bitcoinshirt.co/">
+                <div class="grid-container">
+                    <div class="appicon">
+                        <img src="img/bitcoinshirt.png">
+                    </div>
+                    <div class="apptext">
+                        <h2>Bitcoin shirt</h2>
+                        <p>Cypherpunk and funky Bitcoin merchandise</p>
+                    </div>
+                </div>
+            </a>
+        </div> <!-- end -->
+
+        <div class="row"> <!-- start -->
+            <a href="https://bikebeltline.com/">
+                <div class="grid-container">
+                    <div class="appicon">
+                        <img src="img/beltine.png">
+                    </div>
+                    <div class="apptext">
+                        <h2>Bike Beltline</h2>
+                        <p>Recreational equipment outfitter</p>
+                    </div>
+                </div>
+            </a>
+        </div> <!-- end -->
+
+        <div class="row"> <!-- start -->
+            <a href="https://wearsmyliberty.com/">
+                <div class="grid-container">
+                    <div class="appicon">
+                        <img src="img/wears.png">
+                    </div>
+                    <div class="apptext">
+                        <h2>Wears My Liberty</h2>
+                        <p>Liberty-themed merchandise retailer</p>
+                    </div>
+                </div>
+            </a>
+        </div> <!-- end -->
+
+        <div class="row"> <!-- start -->
+            <a href="https://hodlcat.com/">
+                <div class="grid-container">
+                    <div class="appicon">
+                        <img src="img/holdcat.png">
+                    </div>
+                    <div class="apptext">
+                        <h2>HODLcat</h2>
+                        <p>Merchandise, t-shirts and more</p>
+                    </div>
+                </div>
+            </a>
+        </div> <!-- end -->
+
+         <div class="row"> <!-- start -->
+            <a href="https://kriptode.com/lnhunt/index.html">
+                <div class="grid-container">
+                    <div class="appicon">
+                        <img src="img/lnhunt.png">
+                    </div>
+                    <div class="apptext">
+                        <h2>LN Hunt</h2>
+                        <p>Duck Hunt game with Lightning</p>
                     </div>
                 </div>
             </a>
