--- a/marketplace/index.html
+++ b/marketplace/index.html
@@ -194,7 +194,7 @@
         </div> <!-- end -->
 
         <div class="row"> <!-- start -->
-            <a href="http://www.chromaticcoffee.com/">
+            <a href="https://www.chromaticcoffee.com/">
                 <div class="grid-container">
                     <div class="appicon">
                         <img src="img/chromatic.png">
