--- a/lightning-wallet.html
+++ b/lightning-wallet.html
@@ -242,11 +242,11 @@
           <div class="row">
             
               <div class="col-md-7">
-                <p><strong>LNDhub</strong> is the opensource technology powering Bluewallet’s Lightning wallets. It uses LND as its core and provides user accounts and an accounting system to allow a seemless user experience.</p>
+                <p><strong>LNDhub</strong> is the opensource technology powering Bluewallet’s Lightning wallets. It uses <a href="https://github.com/lightningnetwork/lnd" target="_blank"><strong>LND</strong></a> as its core and provides user accounts and an accounting system to allow a seemless user experience.</p>
 
                 <p>With LNDhub you can run your own Lightning node and bank system. Create Accounts to your family or friends, protecting them with your own node and let them be onboard to the Lightning revolution.</p>
 
-                <p>LNDhub allows you tro create an Opensource Bank. Think about that for a second.</p>
+                <p>LNDhub allows you to create an Opensource Bank. Think about that for a second.</p>
               </div>
               <div class="col-md-5 logo">
                 <img src="img/lndhub.svg">
