--- a/features.html
+++ b/features.html
@@ -68,13 +68,13 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="https://bluewallet.io">
+        <a class="navbar-brand js-scroll-trigger" href="/">
           <img src="img/logo-bluewallet.svg" alt="BlueWallet - Bitcoin Wallet">
         </a>
         <div class="navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
               <li class="single-page nav-item">
-                  <a href="https://bluewallet.io"><i class="fa fa-arrow-left"></i> home</a>
+                  <a href="/"><i class="fa fa-arrow-left"></i> home</a>
               </li>
           </ul>
         </div>
@@ -88,10 +88,16 @@
             <p class="text-muted"></p>
         </div>
           <div class="col-lg-12 my-auto">
+             <div class="row">
+                <div class="feature-item">
+                  <h3 class="text-primary" id="marketplace"><i class="fa fa-shopping-cart"></i> Lapps Marketplace <span class="badge badge-success">new</span></h3>
+                  <p>A Lapp browser and a Maketplace of Lightning enabled apps to help you discover new services.</p>
+                </div>
+            </div>
             <div class="row">
                 <div class="feature-item">
                   <h3 class="text-primary" id="lightning"><i class="fa fa-bolt"></i> Lightning Wallets <span class="badge badge-success">new</span></h3>
-                  <p>Wallets with support for the Lightning Network Protocol. Unfairly cheap and fast transactions.</p>
+                  <p>Wallets with support for the Lightning Network Protocol. Unfairly cheap and fast transactions. You can send, receive and refill your wallets. <a href="/lightning-wallet.html">Read more →</a></p>
                 </div>
             </div>
             <div class="row">
