better url format for lightning wallets
replce /ligthning-wallets.html for /lightning

--- a/index.html
+++ b/index.html
@@ -277,11 +277,11 @@
           </div>
           
             <div class="feature-item">
-              <p>Unfairly cheap and fast transactions. Bluewallet was the first wallet to bring zero configuration, ready to use, user friendly Lightning Network Wallets for iOS and Android. Read more about our open source <a href="/lightning-wallet.html">Lightning Wallets solution</a>.</p>
+              <p>Unfairly cheap and fast transactions. Bluewallet was the first wallet to bring zero configuration, ready to use, user friendly Lightning Network Wallets for iOS and Android. Read more about our open source <a href="/lightning">Lightning Wallets solution</a>.</p>
             </div>
             <div class="row">
             <div class="mx-auto">
-              <a href="/lightning-wallet.html">
+              <a href="/lightning">
                 <button type="button" class="btn btn-lg btn-outline-light">read more →</button>
               </a>
             </div>
