new page for the marketplace

--- a/donate.html
+++ b/donate.html
@@ -68,13 +68,13 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="https://bluewallet.io">
+        <a class="navbar-brand js-scroll-trigger" href="/">
           <img src="img/logo-bluewallet.svg" alt="BlueWallet - Bitcoin Wallet">
         </a>
         <div class="navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
               <li class="single-page nav-item">
-                  <a href="https://bluewallet.io"><i class="fa fa-arrow-left"></i> home</a>
+                  <a href="/"><i class="fa fa-arrow-left"></i> home</a>
               </li>
           </ul>
         </div>
@@ -114,9 +114,11 @@
 
 <footer>
   <div class="container">
-    <div>
+    <div class="fmenu">
           <a href="/donate.html"><span class="foot-menu">Donate</span></a>
           <a href="/features.html"><span class="foot-menu">Features</span></a>
+          <a href="/lightning"><span class="foot-menu">Lighting wallet</span></a>
+          <a href="/lapps"><span class="foot-menu">Lapp marketplace</span></a>
         </div>
         <br />
         <span>&copy; BlueWallet Services S.R.L. All Rights Reserved.</span>
