--- a/features.html
+++ b/features.html
@@ -91,13 +91,14 @@
              <div class="row">
                 <div class="feature-item">
                   <h3 class="text-primary" id="marketplace"><i class="fa fa-shopping-cart"></i> Lapps Marketplace <span class="badge badge-success">new</span></h3>
-                  <p>A Lapp browser and a Maketplace of Lightning enabled apps to help you discover new services.</p>
+                  <p>A Lapp browser and a Maketplace of Lightning enabled apps to help you discover new services.</p> <a href="/lapps">Read more →</a></p>
                 </div>
             </div>
             <div class="row">
                 <div class="feature-item">
                   <h3 class="text-primary" id="lightning"><i class="fa fa-bolt"></i> Lightning Wallets <span class="badge badge-success">new</span></h3>
-                  <p>Wallets with support for the Lightning Network Protocol. Unfairly cheap and fast transactions. You can send, receive and refill your wallets. <a href="/lightning-wallet.html">Read more →</a></p>
+                  <p>Wallets with support for the Lightning Network Protocol. Unfairly cheap and fast transactions. You can send, receive and refill your wallets. </p>
+                  <a href="/lightning">Read more →</a>
                 </div>
             </div>
             <div class="row">
@@ -196,9 +197,11 @@
 
 <footer>
   <div class="container">
-    <div>
+    <div class="fmenu">
           <a href="/donate.html"><span class="foot-menu">Donate</span></a>
           <a href="/features.html"><span class="foot-menu">Features</span></a>
+          <a href="/lightning"><span class="foot-menu">Lighting wallet</span></a>
+          <a href="/lapps"><span class="foot-menu">Lapp marketplace</span></a>
         </div>
         <br />
         <span>&copy; BlueWallet Services S.R.L. All Rights Reserved.</span>
