--- a/lightning/index.html
+++ b/lightning/index.html
@@ -270,9 +270,11 @@
 
 <footer class="lightning">
   <div class="container">
-    <div>
+    <div class="fmenu">
           <a href="/donate.html"><span class="foot-menu">Donate</span></a>
           <a href="/features.html"><span class="foot-menu">Features</span></a>
+          <a href="/lightning"><span class="foot-menu">Lighting wallet</span></a>
+          <a href="/lapps"><span class="foot-menu">Lapp marketplace</span></a>
         </div>
         <br />
         <span>&copy; BlueWallet Services S.R.L. All Rights Reserved.</span>
