add space invaders

--- a/marketplace/index.html
+++ b/marketplace/index.html
@@ -277,6 +277,20 @@
             </a>
         </div> <!-- end -->
 
+         <div class="row"> <!-- start -->
+            <a href="https://lightninghood.com/games/spaceinvaders/">
+                <div class="grid-container">
+                    <div class="appicon">
+                        <img src="img/spaceinvaders.png">
+                    </div>
+                    <div class="apptext">
+                        <h2>Space Invaders</h2>
+                        <p>By lightninghood.com</p>
+                    </div>
+                </div>
+            </a>
+        </div> <!-- end -->
+
         <div class="row"> <!-- start -->
             <a href="https://tippin.me/@bluewalletio">
                 <div class="grid-container">
