add lnpizza to marketplace as a highlight

--- a/marketplace/index.html
+++ b/marketplace/index.html
@@ -18,6 +18,22 @@
 
 <body>
     <div class="container">
+         <div class="row highlight"> <!-- start -->
+            <a href="https://ln.pizza/">
+                <div class="grid-container high">
+                    <small>Highlight</small>
+                </div>
+                <div class="grid-container">
+                    <div class="appicon">
+                        <img src="img/lnpizza.png">
+                    </div>
+                    <div class="apptext">
+                        <h2>LN Pizza</h2>
+                        <p>Lightning fast delivery, lol</p>
+                    </div>
+                </div>
+            </a>
+        </div> <!-- end -->
         <div class="row"> <!-- start -->
             <a href="https://www.bitrefill.com/embed/lightning?utm_source=bluewallet">
                 <div class="grid-container">
