add utm source to urls

--- a/marketplace/index.html
+++ b/marketplace/index.html
@@ -61,7 +61,7 @@
             </a>
         </div> <!-- end -->
         <div class="row"> <!-- start -->
-            <a href="https://yalls.org/">
+            <a href="https://yalls.org/?utm_source=bluewallet">
                 <div class="grid-container">
                     <div class="appicon">
                         <img src="img/yalls.png">
@@ -74,7 +74,7 @@
             </a>
         </div> <!-- end -->
         <div class="row"> <!-- start -->
-            <a href="https://store.blockstream.com">
+            <a href="https://store.blockstream.com/?utm_source=bluewallet">
                 <div class="grid-container">
                     <div class="appicon">
                         <img src="img/blockstream.png">
@@ -87,7 +87,7 @@
             </a>
         </div> <!-- end -->
         <div class="row"> <!-- start -->
-            <a href="https://www.lightningspin.com/">
+            <a href="https://www.lightningspin.com/?utm_source=bluewallet">
                 <div class="grid-container">
                     <div class="appicon">
                         <img src="img/lspin.png">
@@ -100,7 +100,7 @@
             </a>
         </div> <!-- end -->
         <div class="row"> <!-- start -->
-            <a href="https://lightning-roulette.com/">
+            <a href="https://lightning-roulette.com/?utm_source=bluewallet">
                 <div class="grid-container">
                     <div class="appicon">
                         <img src="img/lroulette.png">
@@ -113,7 +113,7 @@
             </a>
         </div> <!-- end -->
         <div class="row"> <!-- start -->
-            <a href="https://lnsms.world">
+            <a href="https://lnsms.world/?utm_source=bluewallet">
                 <div class="grid-container">
                     <div class="appicon">
                         <img src="img/placeholder.png">
@@ -126,7 +126,7 @@
             </a>
         </div> <!-- end -->
         <div class="row"> <!-- start -->
-            <a href="https://torguard.net">
+            <a href="https://torguard.net/?utm_source=bluewallet">
                 <div class="grid-container">
                     <div class="appicon">
                         <img src="img/torguard.png">
@@ -140,7 +140,7 @@
         </div> <!-- end -->
         
         <div class="row"> <!-- start -->
-            <a href="https://satoshis.place">
+            <a href="https://satoshis.place/?utm_source=bluewallet">
                 <div class="grid-container">
                     <div class="appicon">
                         <img src="img/satoshisplace.png">
@@ -154,7 +154,7 @@
         </div> <!-- end -->
 
         <div class="row"> <!-- start -->
-            <a href="https://tallyco.in">
+            <a href="https://tallyco.in/?utm_source=bluewallet">
                 <div class="grid-container">
                     <div class="appicon">
                         <img src="img/tallycoin.png">
@@ -168,7 +168,7 @@
         </div> <!-- end -->
 
         <div class="row"> <!-- start -->
-            <a href="https://kriptode.com/receivesms/index.html">
+            <a href="https://kriptode.com/receivesms/index.html?utm_source=bluewallet">
                 <div class="grid-container">
                     <div class="appicon">
                         <img src="img/receivesms.png">
@@ -182,7 +182,7 @@
         </div> <!-- end -->
 
          <div class="row"> <!-- start -->
-            <a href="https://bitlaunch.io/">
+            <a href="https://bitlaunch.io/?utm_source=bluewallet">
                 <div class="grid-container">
                     <div class="appicon">
                         <img src="img/bitlaunch.png">
@@ -196,7 +196,7 @@
         </div> <!-- end -->
 
         <div class="row"> <!-- start -->
-            <a href="https://cmascremeras.store/">
+            <a href="https://cmascremeras.store/?utm_source=bluewallet">
                 <div class="grid-container">
                     <div class="appicon">
                         <img src="img/cmasc.png">
@@ -210,7 +210,7 @@
         </div> <!-- end -->
 
         <div class="row"> <!-- start -->
-            <a href="https://www.chromaticcoffee.com/">
+            <a href="https://www.chromaticcoffee.com/?utm_source=bluewallet">
                 <div class="grid-container">
                     <div class="appicon">
                         <img src="img/chromatic.png">
@@ -224,7 +224,7 @@
         </div> <!-- end -->
 
           <div class="row"> <!-- start -->
-            <a href="https://bitcoinshirt.co/">
+            <a href="https://bitcoinshirt.co/?utm_source=bluewallet">
                 <div class="grid-container">
                     <div class="appicon">
                         <img src="img/bitcoinshirt.png">
@@ -238,7 +238,7 @@
         </div> <!-- end -->
 
         <div class="row"> <!-- start -->
-            <a href="https://bikebeltline.com/">
+            <a href="https://bikebeltline.com/?utm_source=bluewallet">
                 <div class="grid-container">
                     <div class="appicon">
                         <img src="img/beltine.png">
@@ -252,7 +252,7 @@
         </div> <!-- end -->
 
         <div class="row"> <!-- start -->
-            <a href="https://wearsmyliberty.com/">
+            <a href="https://wearsmyliberty.com/?utm_source=bluewallet">
                 <div class="grid-container">
                     <div class="appicon">
                         <img src="img/wears.png">
@@ -266,7 +266,7 @@
         </div> <!-- end -->
 
         <div class="row"> <!-- start -->
-            <a href="https://hodlcat.com/">
+            <a href="https://hodlcat.com/?utm_source=bluewallet">
                 <div class="grid-container">
                     <div class="appicon">
                         <img src="img/holdcat.png">
@@ -280,7 +280,7 @@
         </div> <!-- end -->
 
          <div class="row"> <!-- start -->
-            <a href="https://kriptode.com/lnhunt/index.html">
+            <a href="https://kriptode.com/lnhunt/index.html?utm_source=bluewallet">
                 <div class="grid-container">
                     <div class="appicon">
                         <img src="img/lnhunt.png">
@@ -294,7 +294,7 @@
         </div> <!-- end -->
 
          <div class="row"> <!-- start -->
-            <a href="https://lightninghood.com/games/spaceinvaders/">
+            <a href="https://lightninghood.com/games/spaceinvaders/?utm_source=bluewallet">
                 <div class="grid-container">
                     <div class="appicon">
                         <img src="img/spaceinvaders.png">
@@ -308,7 +308,7 @@
         </div> <!-- end -->
 
         <div class="row"> <!-- start -->
-            <a href="https://tippin.me/@bluewalletio">
+            <a href="https://tippin.me/@bluewalletio?utm_source=bluewallet">
                 <div class="grid-container">
                     <div class="appicon">
                          <img src="img/tippin.png">
