--- a/marketplace/index.html
+++ b/marketplace/index.html
@@ -19,7 +19,7 @@
 <body>
     <div class="container">
          <div class="row highlight"> <!-- start -->
-            <a href="https://ln.pizza/">
+            <a href="https://ln.pizza/?utm_source=bluewallet">
                 <div class="grid-container high">
                     <small>Highlight</small>
                 </div>
@@ -302,6 +302,20 @@
                     <div class="apptext">
                         <h2>Space Invaders</h2>
                         <p>By lightninghood.com</p>
+                    </div>
+                </div>
+            </a>
+        </div> <!-- end -->
+
+         <div class="row"> <!-- start -->
+            <a href="https://vapecrypto.com/?utm_source=bluewallet">
+                <div class="grid-container">
+                    <div class="appicon">
+                        <img src="img/vape.png">
+                    </div>
+                    <div class="apptext">
+                        <h2>VapeCrypto</h2>
+                        <p>The original bitcoin only vape retailer</p>
                     </div>
                 </div>
             </a>
