fix link app store

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               <h1>A <strong>Bitcoin and Lightning wallet</strong> for iOS and Android</h1>
                 <h2 class="mb-5">Easy to use <span class="light-blue">and secure</span></h2>
                   <ul class="list-unstyled cta">
-                    <li><a class="badge-link2" href="https://itunes.apple.com/us/app/bluewallet-bitcoin-wallet/id1376878040?l=ru&ls=1&mt=8" target="_blank">
+                    <li><a class="badge-link2" href="https://itunes.apple.com/app/bluewallet-bitcoin-wallet/id1376878040" target="_blank">
                     <img src="img/app-store-badge.svg" alt="app store link"></a></li>
                     <li><a href="https://play.google.com/store/apps/details?id=io.bluewallet.bluewallet" target="_blank">
                     <img src="img/play-store-badge.svg" alt="play store link"></a></li>
@@ -304,7 +304,7 @@
             <h2 class="section-heading">Crafted for <strong>iOS</strong> and <strong>android</strong><br />by <strong>Bitcoin users</strong></h2>
             <!-- <p>Our app is available on any mobile device! Download now to get started!</p> -->
             <div class="badges">
-              <a class="badge-link" href="https://itunes.apple.com/us/app/bluewallet-bitcoin-wallet/id1376878040?l=ru&ls=1&mt=8" target="_blank"><img src="img/app-store-badge.svg" alt="app store link"></a>
+              <a class="badge-link" href="https://itunes.apple.com/app/bluewallet-bitcoin-wallet/id1376878040" target="_blank"><img src="img/app-store-badge.svg" alt="app store link"></a>
               <a class="badge-link" href="https://play.google.com/store/apps/details?id=io.bluewallet.bluewallet" target="_blank"><img src="img/play-store-badge.svg" alt="play store link"></a>
             </div>
 
