add bitlum to desktop only

--- a/index.html
+++ b/index.html
@@ -307,7 +307,9 @@
               <a class="badge-link" href="https://itunes.apple.com/app/bluewallet-bitcoin-wallet/id1376878040" target="_blank"><img src="img/app-store-badge.svg" alt="app store link"></a>
               <a class="badge-link" href="https://play.google.com/store/apps/details?id=io.bluewallet.bluewallet" target="_blank"><img src="img/play-store-badge.svg" alt="play store link"></a>
             </div>
-
+            <div class="desktop">
+              <a href="http://bit.ly/2NgcORc" target="_blank">Looking for a desktop wallet? Try out <strong>Bitlum</strong>, first 100 will get a $0.1 bonus</a>
+            </div>
           </div>
         </div>
       </div>
