add pollo and excellion

--- a/marketplace/index.html
+++ b/marketplace/index.html
@@ -29,18 +29,18 @@
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
     <div class="container">
-         <div class="row highlight"> <!-- start -->
-            <a href="https://ln.pizza/?utm_source=bluewallet">
-                <div class="grid-container high">
+        <div class="row highlight"> <!-- start -->
+            <a href="https://tippin.me/@bluewalletio?utm_source=bluewallet">
+                 <div class="grid-container high">
                     <small>Highlight</small>
                 </div>
                 <div class="grid-container">
                     <div class="appicon">
-                        <img src="img/lnpizza.png">
+                         <img src="img/tippin.png">
                     </div>
                     <div class="apptext">
-                        <h2>LN Pizza</h2>
-                        <p>Lightning fast delivery, lol</p>
+                        <h2>Tip @bluewallet</h2>
+                        <p>Thank you :)</p>
                     </div>
                 </div>
             </a>
@@ -67,6 +67,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="apptext">
                         <h2>Zigzag</h2>
                         <p>Exchange crypto in seconds with low fees</p>
+                    </div>
+                </div>
+            </a>
+        </div> <!-- end -->
+        <div class="row"> <!-- start -->
+            <a href="https://ln.pizza/?utm_source=bluewallet">
+                <div class="grid-container">
+                    <div class="appicon">
+                        <img src="img/lnpizza.png">
+                    </div>
+                    <div class="apptext">
+                        <h2>LN Pizza</h2>
+                        <p>Lightning fast delivery, lol</p>
                     </div>
                 </div>
             </a>
@@ -331,16 +344,28 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
             </a>
         </div> <!-- end -->
-
-        <div class="row"> <!-- start -->
-            <a href="https://tippin.me/@bluewalletio?utm_source=bluewallet">
+         <div class="row"> <!-- start -->
+            <a href="https://www.excellion.com/?utm_source=bluewallet">
                 <div class="grid-container">
                     <div class="appicon">
-                         <img src="img/tippin.png">
+                        <img src="img/excellion.png">
                     </div>
                     <div class="apptext">
-                        <h2>Tip @bluewallet</h2>
-                        <p>Thank you :)</p>
+                        <h2>Excellion</h2>
+                        <p>Proof of hat</p>
+                    </div>
+                </div>
+            </a>
+        </div> <!-- end -->
+         <div class="row"> <!-- start -->
+            <a href="https://pollofeed.com/?utm_source=bluewallet">
+                <div class="grid-container">
+                    <div class="appicon">
+                        <img src="img/pollo.png">
+                    </div>
+                    <div class="apptext">
+                        <h2>Pollo feed</h2>
+                        <p>Lightning Powered Chicken Feeder</p>
                     </div>
                 </div>
             </a>
