--- a/index.html
+++ b/index.html
@@ -106,7 +106,9 @@
                     <img src="img/play-store-badge.svg" alt="play store link"></a></li>
                   </ul>
             </div>
-
+              <div class="desktop">
+              <a href="http://bit.ly/2NgcORc" target="_blank">Looking for a desktop wallet? Try out our friends at <strong>Bitlum</strong></a>
+            </div>
           </div>
 
           <div class="col-lg-5">
@@ -115,47 +117,6 @@
         </div>
       </div>
     </header>
-
-
-
-    <!-- Modal -->
-    <div class="modal fade" id="ModalAndroid" tabindex="-1" role="dialog" aria-labelledby="Modal android" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLongTitle">Android coming soon...</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <!-- Begin Mailchimp Signup Form -->
-              <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
-              <style type="text/css">
-                #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}
-                /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
-                   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-              </style>
-              <div id="mc_embed_signup">
-              <form action="https://woolrabbit.us17.list-manage.com/subscribe/post?u=6733da37320f82a3dbe84a9cc&amp;id=2474ce3b66" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                  <div id="mc_embed_signup_scroll">
-                <label for="mce-EMAIL">Subscribe to blue wallet</label>
-                <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-                  <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                  <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_6733da37320f82a3dbe84a9cc_2474ce3b66" tabindex="-1" value=""></div>
-                  <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-                  </div>
-              </form>
-              </div>
-
-              <!--End mc_embed_signup-->
-          </div>
-        </div>
-      </div>
-    </div>
-
-
-
     <section class="features" id="features">
       <div class="container">
         <div class="row">
@@ -306,9 +267,6 @@
             <div class="badges">
               <a class="badge-link" href="https://itunes.apple.com/app/bluewallet-bitcoin-wallet/id1376878040" target="_blank"><img src="img/app-store-badge.svg" alt="app store link"></a>
               <a class="badge-link" href="https://play.google.com/store/apps/details?id=io.bluewallet.bluewallet" target="_blank"><img src="img/play-store-badge.svg" alt="play store link"></a>
-            </div>
-            <div class="desktop">
-              <a href="http://bit.ly/2NgcORc" target="_blank">Looking for a desktop wallet? Try out <strong>Bitlum</strong>, first 100 will get a $0.1 bonus</a>
             </div>
           </div>
         </div>
