--- a/lightning/index.html
+++ b/lightning/index.html
@@ -275,6 +275,7 @@
           <a href="/features.html"><span class="foot-menu">Features</span></a>
           <a href="/lightning"><span class="foot-menu">Lightning wallet</span></a>
           <a href="/lapps"><span class="foot-menu">Lapp marketplace</span></a>
+          <a href="/watch-app"><span class="foot-menu">Watch-app</span></a>
         </div>
         <br />
         <span>&copy; BlueWallet Services S.R.L. All Rights Reserved.</span>
