new menu to facilitate navigation
new menu to facilitate navigation with a dropdown to main features

--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@
           <ul class="navbar-nav ml-auto">
               <li class="nav-item">
                   <a class="nav-link js-scroll-trigger" href="#features">Features</a>
+                  <ul>
+                    <li><a class="sublink" href="/features.html">View all</a></li>
+                    <li><a class="sublink" href="/lightning">Lightning Wallets</a></li>
+                    <li><a class="sublink" href="/lapps">Lapp Marketplace</a></li>  
+                  </ul>
               </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#download">Download</a>
