--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
                   <a class="nav-link js-scroll-trigger" href="#features">Features</a>
                   <ul>
                     <li><a class="sublink" href="/features.html">View all</a></li>
+                    <li><a class="sublink" href="/bitcoin-wallet">Bitcoin Wallets</a></li>
                     <li><a class="sublink" href="/lightning">Lightning Wallets</a></li>
                     <li><a class="sublink" href="/lapps">Lapp Marketplace</a></li>  
                   </ul>
