mobile changes and fixes

--- a/bitcoin-wallet/index.html
+++ b/bitcoin-wallet/index.html
@@ -112,7 +112,7 @@
               <div>
                 <img src="../img/lightning.png">
                 <h3>Lightning wallet</h3>
-                <p>The Bitcoin Lightning wallet can be used on custodial fashion or non-custodial if you run your own node. This wallet provides the ability to receive lightning out of the box and send payments as well. It is powered by our opensource LNDhub solution.  Read more</p>
+                <p>The Bitcoin Lightning wallet can be used on custodial fashion or non-custodial if you run your own node. This wallet provides the ability to receive lightning out of the box and send payments as well. It is powered by our opensource LNDhub solution.<br /><a href="/lightning"><strong>Read more</strong></a></p>
               </div>
               <div>
                 <img src="../img/segwit.png">
@@ -144,11 +144,11 @@
     <section class="create-import">
       <div class="container">
         <div class="col-md-12">
-          <div class="row">
-            <div class="col-md-4 app-preview text-center">
+          <div class="row stuff">
+            <div class="col-md-4 app-preview text-center order2">
               <img src="../img/create-wallet.png" alt="crete wallet bluewallet">
             </div>
-            <div class="col-md-8 my-auto">
+            <div class="col-md-8 my-auto order1">
               <h2>Create wallets</h2>
               <p>The create wallet options allows you to add wallet by simply choosing the type you want.
               The Bitcoin wallet (a multi address HD and segwit) is the default option and the one you should choose. The advanced option allows you to create a Bitcoin Single address.</p>
@@ -200,6 +200,7 @@
     <div class="fmenu">
           <a href="/donate.html"><span class="foot-menu">Donate</span></a>
           <a href="/features.html"><span class="foot-menu">Features</span></a>
+          <a href="/bitcoin-wallet"><span class="foot-menu">Bitcoin wallet</span></a>
           <a href="/lightning"><span class="foot-menu">Lightning wallet</span></a>
           <a href="/lapps"><span class="foot-menu">Lapp marketplace</span></a>
         </div>
