--- a/lapps/index.html
+++ b/lapps/index.html
@@ -165,6 +165,7 @@
          <div class="fmenu">
           <a href="/donate.html"><span class="foot-menu">Donate</span></a>
           <a href="/features.html"><span class="foot-menu">Features</span></a>
+          <a href="/bitcoin-wallet"><span class="foot-menu">Bitcoin wallet</span></a>
           <a href="/lightning"><span class="foot-menu">Lightning wallet</span></a>
           <a href="/lapps"><span class="foot-menu">Lapp marketplace</span></a>
         </div>
