--- a/lightning/index.html
+++ b/lightning/index.html
@@ -85,7 +85,7 @@
     <section class="first">
     <div class="container">
         <div class="section-heading text-center">
-            <h1>Lightning Wallets</h1>
+            <h1>Lightning wallets</h1>
             <h2>with zero configuration</h2>
         </div>
           <div class="col-lg-12 my-auto">
