--- a/bitcoin-wallet/index.html
+++ b/bitcoin-wallet/index.html
@@ -46,15 +46,15 @@
 
     <meta property="og:site_name" content="BlueWallet - Bitcoin wallet" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="A Bitcoin wallet for iOS. Easy to use and secure" />
-    <meta property="og:url" content="https://bluewallet.io/lightning" />
+    <meta property="og:description" content="Bitcoin onchain and lightning wallet available for iOS and android" />
+    <meta property="og:url" content="https://bluewallet.io/bitcoin-wallet" />
     <meta property="og:title" content="BlueWallet - Bitcoin wallet" />
     <meta property="fb:app_id" content="254973701957449" />
     <meta property="fb:pages" content="499685187154976" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="BlueWallet - Bitcoin wallet" />
     <meta name="twitter:description" content="A Bitcoin wallet for iOS. Easy to use and secure" />
-    <meta name="twitter:url" content="https://bluewallet.io/lightning" />
+    <meta name="twitter:url" content="https://bluewallet.io/bitcoin-wallet" />
 
   </head>
 
