add moe features to features page

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                   <a href="/features.html#pkeys">
                     <div class="feature-item"> 
                          <h3> <i class="icon-home"></i> Be in control</h3>
-                          <p>Private keys never leave your device.  You control your private keys</p>   
+                          <p>On your Bitcoin wallet your Private keys never leave your device.  You control your private keys</p>   
                     </div>
                   </a>
                 </div>
