--- a/marketplace/index.html
+++ b/marketplace/index.html
@@ -132,7 +132,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
                     <div class="apptext">
                         <h2>MicroBet</h2>
-                        <p>Make your prediction and let people bet against it using Lightning Network micro payments</p>
+                        <p>Make your prediction and let people bet against it</p>
                     </div>
                 </div>
             </a>
