help on main nav on home page

--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
             </li>
+             <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="http://help.bluewallet.io">Help</a>
+            </li>
           </ul>
         </div>
       </div>
