--- a/marketplace/index.html
+++ b/marketplace/index.html
@@ -107,7 +107,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
             </a>
         </div> <!-- end -->
-         <div class="row"> <!-- start -->
+        <div class="row"> <!-- start -->
             <a href="https://kriptode.com/receivesms/index.html?utm_source=bluewallet">
                 <div class="grid-container">
                     <div class="appicon">
@@ -120,10 +120,62 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
             </a>
         </div> <!-- end -->
+        <div class="row"> <!-- start -->
+            <a href="https://fixedfloat.com/?utm_source=bluewallet">
+                <div class="grid-container">
+                    <div class="appicon">
+                        <img src="img/fixedfloat.png">
+                    </div>
+                    <div class="apptext">
+                        <h2>Fixedfloat</h2>
+                        <p>Lightning crypto exchange</p>
+                    </div>
+                </div>
+            </a>
+        </div> <!-- end -->
+        <div class="row"> <!-- start -->
+            <a href="https://paywall.link/?utm_source=bluewallet">
+                <div class="grid-container">
+                    <div class="appicon">
+                        <img src="img/paywall.png">
+                    </div>
+                    <div class="apptext">
+                        <h2>Paywall.Link</h2>
+                        <p>Lock any link behind a paywall </p>
+                    </div>
+                </div>
+            </a>
+        </div> <!-- end -->
 
         <div class="section"> <!-- section start -->
             <h3>Games</h3>
         </div> <!-- section end -->
+         <div class="row"> <!-- start -->
+            <a href="https://lightning-roulette.com/?utm_source=bluewallet">
+                <div class="grid-container">
+                    <div class="appicon">
+                        <img src="img/lroulette.png">
+                    </div>
+                    <div class="apptext">
+                        <h2>Lightning Roulette</h2>
+                        <p>Roulette lightning network game</p>
+                    </div>
+                </div>
+            </a>
+        </div> <!-- end -->
+        <div class="row"> <!-- start -->
+            <a href="https://lightningspin.com/?utm_source=bluewallet">
+                <div class="grid-container">
+                    <div class="appicon">
+                        <img src="img/lspin.png">
+                    </div>
+                    <div class="apptext">
+                        <h2>Lightning Spin</h2>
+                        <p>Spin wheel lightning network game</p>
+                    </div>
+                </div>
+            </a>
+        </div> <!-- end -->
         <div class="row"> <!-- start -->
             <a href="https://www.microbet.fun/?utm_source=bluewallet">
                 <div class="grid-container">
@@ -137,19 +189,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
             </a>
         </div> <!-- end -->
-        <div class="row"> <!-- start -->
-            <a href="https://www.lightningspin.com/?utm_source=bluewallet">
-                <div class="grid-container">
-                    <div class="appicon">
-                        <img src="img/lspin.png">
-                    </div>
-                    <div class="apptext">
-                        <h2>Lightning Spin</h2>
-                        <p>Spin wheel lightning network game</p>
-                    </div>
-                </div>
-            </a>
-        </div> <!-- end -->
          <div class="row"> <!-- start -->
             <a href="https://fortune.lngames.net/?utm_source=bluewallet">
                 <div class="grid-container">
@@ -159,19 +198,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="apptext">
                         <h2>Wheel of fortune</h2>
                         <p>LN Games</p>
-                    </div>
-                </div>
-            </a>
-        </div> <!-- end -->
-        <div class="row"> <!-- start -->
-            <a href="https://lightning-roulette.com/?utm_source=bluewallet">
-                <div class="grid-container">
-                    <div class="appicon">
-                        <img src="img/lroulette.png">
-                    </div>
-                    <div class="apptext">
-                        <h2>Lightning Roulette</h2>
-                        <p>Roulette lightning network game</p>
                     </div>
                 </div>
             </a>
