--- a/buy-bitcoin-redirect.html
+++ b/buy-bitcoin-redirect.html
@@ -25,7 +25,7 @@
 			if (location.country_code == 'ZA' || location.country_code == 'ZAF' || location.country_code == 'ZAR') {
 			  window.location = 'https://ice3x.com?ref=14342738';
 			} else if (safello_countries.indexOf(location.country_code) !== -1) {
- 			  window.location = 'https://app.safello.com/sdk/quickbuy.html?appId=4904c769-8a1d-43ca-8bd0-896520c94fdf&theme=bluewallet&layout=app&address=' + address;
+ 			  window.location = 'https://app.safello.com/sdk/quickbuy.html?appId=4904c769-8a1d-43ca-8bd0-896520c94fdf&country=' + location.country_code + '&theme=bluewallet&layout=app&address=' + address;
 			}  else {
   			window.location = 'https://old.changelly.com/?ref_id=rtagfcvnwiwvhm99';
 			}
