add agar and new indicator

--- a/marketplace/index.html
+++ b/marketplace/index.html
@@ -129,6 +129,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="apptext">
                         <h2>Fixedfloat</h2>
                         <p>Lightning crypto exchange</p>
+                        <div class="new"></div>
                     </div>
                 </div>
             </a>
@@ -185,6 +186,20 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="apptext">
                         <h2>MicroBet</h2>
                         <p>Make your prediction and let people bet against it</p>
+                    </div>
+                </div>
+            </a>
+        </div> <!-- end -->
+        <div class="row"> <!-- start -->
+            <a href="https://agar.satoshis.games/?utm_source=bluewallet">
+                <div class="grid-container">
+                    <div class="appicon">
+                        <img src="img/agar.png">
+                    </div>
+                    <div class="apptext">
+                        <h2>Agar</h2>
+                        <p>By satoshis.games</p>
+                        <div class="new"></div>
                     </div>
                 </div>
             </a>
@@ -282,14 +297,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </a>
         </div> <!-- end -->
         <div class="row"> <!-- start -->
-            <a href="https://miniroulette.lngames.net/?utm_source=bluewallet">
+            <a href="https://satoshis.games/?utm_source=bluewallet">
                 <div class="grid-container">
                     <div class="appicon">
-                        <img src="img/miniroulette.png">
+                        <img src="img/satoshisgames.png">
                     </div>
                     <div class="apptext">
-                        <h2>Mini roulette</h2>
-                        <p>LN Games</p>
+                        <h2>Satoshis Games</h2>
+                        <p>A gaming platform on Lightning</p>
+                        <div class="new"></div>
                     </div>
                 </div>
             </a>
