--- a/marketplace/index.html
+++ b/marketplace/index.html
@@ -56,7 +56,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <h3>Services</h3>
         </div> <!-- section end -->
         <div class="row"> <!-- start -->
-            <a href="https://www.bitrefill.com/embed/lightning?utm_source=bluewallet">
+            <a href="https://www.bitrefill.com/embed/lightning?ref=erF6mfho?utm_source=bluewallet">
                 <div class="grid-container">
                     <div class="appicon">
                         <img src="img/bitrefill.png">
@@ -81,15 +81,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
             </a>
         </div> <!-- end -->
-         <div class="row"> <!-- start -->
-            <a href="https://lnsms.world/?utm_source=bluewallet">
+        <div class="row"> <!-- start -->
+            <a href="https://fixedfloat.com/?utm_source=bluewallet">
                 <div class="grid-container">
                     <div class="appicon">
-                        <img src="img/placeholder.png">
+                        <img src="img/fixedfloat.png">
                     </div>
                     <div class="apptext">
-                        <h2>lnsms</h2>
-                        <p>Send texts worldwide and pay with Lightning</p>
+                        <h2>Fixedfloat</h2>
+                        <p>Lightning crypto exchange</p>
+                        <div class="new"></div>
                     </div>
                 </div>
             </a>
@@ -121,20 +122,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </a>
         </div> <!-- end -->
         <div class="row"> <!-- start -->
-            <a href="https://fixedfloat.com/?utm_source=bluewallet">
-                <div class="grid-container">
-                    <div class="appicon">
-                        <img src="img/fixedfloat.png">
-                    </div>
-                    <div class="apptext">
-                        <h2>Fixedfloat</h2>
-                        <p>Lightning crypto exchange</p>
-                        <div class="new"></div>
-                    </div>
-                </div>
-            </a>
-        </div> <!-- end -->
-        <div class="row"> <!-- start -->
             <a href="https://paywall.link/?utm_source=bluewallet">
                 <div class="grid-container">
                     <div class="appicon">
@@ -147,7 +134,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
             </a>
         </div> <!-- end -->
-
+        <div class="row"> <!-- start -->
+            <a href="https://lnsms.world/?utm_source=bluewallet">
+                <div class="grid-container">
+                    <div class="appicon">
+                        <img src="img/placeholder.png">
+                    </div>
+                    <div class="apptext">
+                        <h2>lnsms</h2>
+                        <p>Send texts worldwide and pay with Lightning</p>
+                    </div>
+                </div>
+            </a>
+        </div> <!-- end -->
         <div class="section"> <!-- section start -->
             <h3>Games</h3>
         </div> <!-- section end -->
