--- a/watch-app/index.html
+++ b/watch-app/index.html
@@ -44,8 +44,8 @@
     <meta name="theme-color" content="#ffffff">
 
     <!-- og:tags -->
-    <meta property="og:image" content="https://bluewallet.io/img/bluewallet-big.png" />
-    <meta name="twitter:image" content="https://bluewallet.io/img/bluewallet-big.png" />
+    <meta property="og:image" content="https://bluewallet.io/img/bighead3.png" />
+    <meta name="twitter:image" content="https://bluewallet.io/img/bighead3.png" />
 
     <meta property="og:site_name" content="BlueWallet - Bitcoin and Lightning wallet" />
     <meta property="og:type" content="website" />
