--- a/watch-app/index.html
+++ b/watch-app/index.html
@@ -14,10 +14,10 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, maximum-scale=1.0, initial-scale=1.0">
-    <meta name="description" content="lapps for bitcoin and lightning. Lightning powered and enabled apps">
+    <meta name="description" content="Apple Watch app for bitcoin and lightning">
     <meta name="author" content="Bluewallet Services S.R.L.">
 
-    <title>Watch app - Bitcoin and Lightning wallet for iOS and Android</title>
+    <title>Watch app - Bitcoin and Lightning wallet for iOS and Apple Watch</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../ven/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -51,13 +51,13 @@
     <meta property="og:type" content="website" />
     <meta property="og:description" content="A Bitcoin and Lightning wallet for iOS. Easy to use and secure" />
     <meta property="og:url" content="https://bluewallet.io/" />
-    <meta property="og:title" content="BlueWallet - Bitcoin and Lightning wallet" />
+    <meta property="og:title" content="Watch app - Bitcoin and Lightning wallet for iOS and Apple Watch" />
     <meta property="fb:app_id" content="254973701957449" />
     <meta property="fb:pages" content="499685187154976" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="BlueWallet - Bitcoin and Lightning wallet" />
-    <meta name="twitter:description" content="A Bitcoin and Lightning wallet for iOS. Easy to use and secure" />
-    <meta name="twitter:url" content="https://bluewallet.io/" />
+    <meta name="twitter:title" content="Watch app - Bitcoin and Lightning wallet for iOS and Apple Watch" />
+    <meta name="twitter:description" content="Apple Watch app for bitcoin and lightning" />
+    <meta name="twitter:url" content="https://bluewallet.io/watch-app" />
 
   </head>
 
