--- a/watch-app/index.html
+++ b/watch-app/index.html
@@ -85,7 +85,7 @@
           <div class="col-lg-6 my-auto">
             <div class="header-content mx-auto">
               <h1>watch app</h1>
-                <p>A beautiful designed watch app for Bitcoin.<br />The first <strong>lightning enable</strong> watch wallet, by bluewallet.</p>
+                <p>A beautifully designed watch app for Bitcoin.<br />The first <strong>lightning enabled</strong> watch wallet, by bluewallet.</p>
                 <ul class="list-unstyled cta">
                     <li><a class="badge-link2" href="https://itunes.apple.com/app/bluewallet-bitcoin-wallet/id1376878040" target="_blank">
                     <img src="../img/app-store-badge.svg" alt="app store link"></a>
